--- a/WebShop/Views/Product/Index.cshtml
+++ b/WebShop/Views/Product/Index.cshtml
@@ -1,7 +1,22 @@
-﻿
+﻿@model List<WebShop.Models.Product>
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Продукты</h2>
 
+<div>
+    <table border="1">
+        <tr>
+            <td>Name</td>
+            <td>Price</td>
+        </tr>
+        @foreach(var p in Model)
+        {
+        <tr>
+            <td>@p.Name</td>
+            <td>@p.Price</td>
+        </tr>
+        }
+    </table>
+</div>
