Avalible to add product

--- a/WebShop/Views/Product/Index.cshtml
+++ b/WebShop/Views/Product/Index.cshtml
@@ -6,6 +6,7 @@
 <h2>Продукты</h2>
 
 <div>
+    @Html.ActionLink("Додати продукт", "Create", "Product");
     <table border="1">
         <tr>
             <td>Name</td>
