--- a/WebShop/Views/Product/Index.cshtml
+++ b/WebShop/Views/Product/Index.cshtml
@@ -7,17 +7,20 @@
 
 <div>
     @Html.ActionLink("Додати продукт", "Create", "Product");
+    <br />
     <table border="1">
         <tr>
             <td>Name</td>
             <td>Price</td>
         </tr>
-        @foreach(var p in Model)
+        @foreach (var p in Model)
         {
         <tr>
-            <td>@p.Name</td>
-            <td>@p.Price</td>
+            <td>@p.Name </td>
+            <td>@p.Price ₴ </td>
+            <td>@Html.ActionLink("X", "Delete", new {name = p.Name }) </td>
         </tr>
         }
     </table>
+    <br />
 </div>
